[package]
name = "distributed_neural_network"
version = "0.1.0"
edition = "2021"

# Optional: Add description, authors, etc.
description = "A distributed neural network system with task scheduling, load balancing, and fault tolerance"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Message passing (RabbitMQ)
lapin = "2.0"

# Web framework for REST API
warp = "0.3"

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for unique identifiers
uuid = { version = "1", features = ["v4"] }

# Prometheus metrics collection
prometheus = "0.13"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variable configuration
config = "0.11"

# Regex for validation
regex = "1"

# HMAC and JWT for security
jsonwebtoken = "8.1"
hmac = "0.12"
sha2 = "0.10"

# Testing framework for lazy static initialization
lazy_static = "1.4"

# Optional: Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
tokio = { version = "1", features = ["signal"] }

[dev-dependencies]
# Testing utilities
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[features]
default = ["full"]

# Enable optional features for specific use cases
